--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
   build_runner: ^2.11.0
   retrofit_generator: ^10.2.3
   json_serializable: ^6.12.0
+  freezed: ^3.2.5
 
 flutter:
   uses-material-design: true
